Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26025

QQuickItem documentation should mention the expected behaviour of derived classes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • 5.0.0
    • None
    • Winter and I have no coffee

    Description

      When deriving classes from QQuickItem there are a number of virtual methods that can be overridden (e.g. geometryChanged). The documentation should be a bit clearer about what derived classes should do. For example, one of the following snippets:

      1) Derived classes should call the base class method before/after their own implementation
      2) This method is called as a convenience for derived classes (hmm, why not a signal)
      3) This method must be implemented by derived classes (why not a pure?)

      In the specific case of geometryChanged it suggests #2 when it's really #1.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            aalpert-nokia Alan Alpert (closed Nokia identity) (Inactive)
            mgoddard Michael Goddard (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes