Better documentation for subclassing QQuickItem

Task-number: QTBUG-26025

Change-Id: Ia0fadf54ee8924f9892bc567c107efc4dca80628
Reviewed-by: Martin Jones <martin.jones@nokia.com>